2004-03-03  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime.c (_gnome_vfs_get_mime_type_internal):
	Prefer extensions for ole-streams. Fixes sniffing of ms office types.

2004-03-03  Alexander Larsson  <alexl@redhat.com>

	* modules/file-method.c (do_monitor_add):
	Handle NULL filenames correctly.

2004-03-02  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-monitor-client.c:
	(gnome_vfs_volume_monitor_client_class_init),
	(read_drives_from_daemon), (read_volumes_from_daemon),
	(gnome_vfs_volume_monitor_client_finalize):
	* libgnomevfs/gnome-vfs-volume-ops.c: (force_probe),
	(emit_pre_unmount):
	Handle NIL return from _gnome_vfs_client_get_daemon().
	Hopefully fixes #133808.

2004-03-02  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime.c (_gnome_vfs_get_mime_type_internal):
	Extension before sniffed for bzip2.

2004-02-28  Bryan Forbes  <mxpxfifws@yahoo.com>

	* libgnomevfs/gnome-vfs-drive.h: changed GnomeVFSDriveClass to follow
	conventions used in Gtk+ to work with C++ bindings.
	* libgnomevfs/gnome-vfs-volume.h: moved the inclusion of gnome-vfs-drive.h
	lower; took out forward declaration of GnomeVFSDeviceType and declared it
	before including gnome-vfs-drive.h; moved forward declarations of
	GnomeVFSDrive, GnomeVFSVolume, and GnomeVFSVolumeOpCallback to right before
	inclusion of gnome-vfs-drive.h changed GnomeVFSVolumeClass to follow
	conventions used in Gtk+ to work with C++ bindings.
	* libgnomevfs/gnome-vfs.h: added gnome-vfs-drive.h, gnome-vfs-volume.h, and
	gnome-vfs-volume-monitor.h to the list of included headers.
	* libgnomevfs/Makefile.am: added gnome-vfs-drive.h, gnome-vfs-volume.h, and
	gnome-vfs-volume-monitor.h to the list of headers to generated gtypes from.
	* Closes bug #135554.

2004-03-01  Alexander Larsson  <alexl@redhat.com>

	* modules/sftp-method.c (sftp_connect):
	Add -oNoHostAuthenticationForLocalhost yes option.
	Patch from Stefan Voelkel
