@@ -1,3 +1,9 @@
+2004-03-04  Alexander Larsson  <alexl@redhat.com>
+
+	* libgnomevfs/xdgmimeint.h: 
+	* libgnomevfs/xdgmimeint.c:
+	Fix some declarations.
+
 2004-03-03  Alexander Larsson  <alexl@redhat.com>
 
 	* libgnomevfs/gnome-vfs-mime.c (_gnome_vfs_get_mime_type_internal):
